--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
+    "helpers": "^0.0.6",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2"
   }
