--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@discordjs/voice": "^0.6.0",
     "discord-api-types": "^0.37.42",
     "discord-fetch-all": "^3.0.2",
-    "discord.js": "^13.2.0",
+    "discord.js": "^14.17.3",
     "dotenv": "^10.0.0",
     "helpers": "^0.0.6",
     "node-schedule": "^2.1.1",
+    "npm": "^11.0.0",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2"
   }
